--- a/index.html
+++ b/index.html
@@ -50,6 +50,36 @@
             <div id="penalty-izquierda"></div>
             <div id="linea-vertical-medio-campo-medio"></div>
             <div id="circulo-central"></div>
+            <div id="ccl" class="circle"></div>
+            <div id="ccr" class="circle"></div>
+            <div class="ccu-left">
+              <div id="ccu-left1" class="rect"></div>
+              <div id="ccu-left2" class="rect"></div>
+              <div id="ccu-left3" class="rect"></div>
+            </div>
+            <div class="ccu-right">
+              <div id="ccu-right1" class="rect"></div>
+              <div id="ccu-right2" class="rect"></div>
+              <div id="ccu-right3" class="rect"></div>
+            </div>
+            <div class="ccd-left">
+              <div id="ccd-left1" class="rect"></div>
+              <div id="ccd-left2" class="rect"></div>
+              <div id="ccd-left3" class="rect"></div>
+            </div>
+            <div class="ccd-right">
+              <div id="ccd-right1" class="rect"></div>
+              <div id="ccd-right2" class="rect"></div>
+              <div id="ccd-right3" class="rect"></div>
+            </div>
+            <div class="ccc-left">
+              <div id="ccd-left1" class="rect"></div>
+              <div id="ccd-left2" class="rect"></div>
+            </div>
+            <div class="ccc-right">
+              <div id="ccc-right1" class="rect"></div>
+              <div id="ccc-right2" class="rect"></div>
+            </div>
             <div id="area-grande-derecha"></div>
             <div id="area-pequena-derecha"></div>
             <div id="medio-campo-derecha"></div>
