--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
               <div id="ccd-right3" class="rect"></div>
             </div>
             <div class="ccc-left">
-              <div id="ccd-left1" class="rect"></div>
-              <div id="ccd-left2" class="rect"></div>
+              <div id="ccc-left1" class="rect"></div>
+              <div id="ccc-left2" class="rect"></div>
             </div>
             <div class="ccc-right">
               <div id="ccc-right1" class="rect"></div>
