--- a/index.html
+++ b/index.html
@@ -14,7 +14,18 @@
 
   <body>
     <div id="escenario">
+      <div id="left-sidebar">
+        <div class="sidebar-empty"></div>
+        <div class="sidebar-ads-left"></div>
+        <div class="sidebar-empty"></div>
+      </div>
+      <div id="left-goal">
+        <div class="empty"></div>
+        <div class="goal-rect left-rect"></div>
+        <div class="empty"></div>
+      </div>
       <div id="field-container">
+        <div id="upper-ads"></div>
         <div class="contenedor-campo">
           <div id="esquina-superior-izquierda"></div>
           <div id="esquina-superior-derecha"></div>
@@ -103,6 +114,17 @@
             <div id="agr8" class="rect"></div>
           </div>
         </div>
+        <div id="lower-ads"></div>
+      </div>
+      <div id="right-goal">
+        <div class="empty"></div>
+        <div class="goal-rect right-rect"></div>
+        <div class="empty"></div>
+      </div>
+      <div id="right-sidebar">
+        <div class="sidebar-empty"></div>
+        <div class="sidebar-ads-right"></div>
+        <div class="sidebar-empty"></div>
       </div>
     </div>
   </body>
